--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -37,6 +37,11 @@ Additional Header coloring, spacing, and style goes here
   width: 100%;
 }
 
+#button-group a:hover{
+  color: var(--white);
+  text-decoration: none;
+}
+
 /* mobile styles */
 @media only screen and (max-width: 600px) {
   #header div{
