--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -9,3 +9,32 @@ Additional Footer coloring, spacing, and style goes here
 #footer .container{
   width: 30%;
 }
+
+#footer .container a:nth-child(1) img{
+  border: 3px solid var(--white);
+  border-radius: 50%;
+}
+
+#footer h3{
+  font-size: 5em;
+  margin-bottom: 3vh;
+}
+
+/* tablet styles */
+@media only screen and (max-width: 768px) {
+  #footer .container{
+    width: 55%;
+  }
+}
+
+/* mobile styles */
+@media only screen and (max-width: 600px) {
+
+  #footer h3{
+    font-size: 3em;
+  }
+
+  #footer .container{
+    width: 65%;
+  }  
+}
