--- a/src/css/Info.css
+++ b/src/css/Info.css
@@ -32,10 +32,21 @@ Additional Info coloring, spacing, and style goes here
   text-align: center;
 }
 
+.info-image{
+  display: block;
+  width: 60%;
+  padding: 2em 0;
+  margin: auto;
+}
+
 /* mobile styles */
 @media only screen and (max-width: 600px) {
   #about h1{
-    font-size: 3em;
+    font-size: 3.5em;
+  }
+
+  #about .card{
+    font-size: 1em;
   }
 
 }
