--- a/src/css/Variables.css
+++ b/src/css/Variables.css
@@ -5,9 +5,9 @@ Store things here
 :root{
   /* Colors - via style guide */
   --russianViolet: #150031;
-  --electricIndigo: #5e2bff;
-  --electricBlue: #53f5f9;
-  --paradisePink: #f02262;
-  --cyberYellow: #ffea4a;
+  --electricIndigo: #4F60FF;
+  --electricBlue: #5EDFF0;
+  --paradisePink: #FF6B98;
+  --cyberYellow: #F2E686;
   --white: #f3f3f3;
 }
