--- a/src/css/Tracks.css
+++ b/src/css/Tracks.css
@@ -2,10 +2,17 @@
 Additional Tracks coloring, spacing, and style goes here
 */
 
+@keyframes tracks{
+  to{
+    filter: none;
+  }
+}
+
 #tracks{
-  background: linear-gradient(to bottom, var(--russianViolet), transparent);
-  width: 100%;
-  height: 100vh;
+  width: 85%;
+  height: fit-content;
+  padding: 2em 0;
+  margin: auto;
 }
 
 #tracks-title{
@@ -35,31 +42,96 @@ Additional Tracks coloring, spacing, and style goes here
 
 #tracks-visuals img{
   position: relative;
-  width: 33%;
+  width: 39%;
+  filter: saturate(1.5);
 }
 
 #tracks-visuals img:nth-child(1){
-  top: 20em;
-  left: 2em;
+  animation: tracks 1s cubic-bezier(0.075, 0.82, 0.165, 1) 0s infinite alternate;
 }
 
 #tracks-visuals img:nth-child(2){
-  left: -5%;
+  top: 8em;
+  left: 2em;
+  animation: tracks 1s cubic-bezier(0.075, 0.82, 0.165, 1) .25s infinite alternate;
 }
 
 #tracks-visuals img:nth-child(3){
-  top: 25em;
-  left: -18%;
+  left: 5em;
+  animation: tracks 1s cubic-bezier(0.075, 0.82, 0.165, 1) .5s infinite alternate;
 }
 
-@media only screen and (max-width: 600px) {
+#tracks-visuals img:nth-child(4){
+  top: 10em;
+  left: 8em;
+  animation: tracks 1s cubic-bezier(0.075, 0.82, 0.165, 1) .75s infinite alternate;
+}
+
+@media only screen and (max-width: 1200px) {
+
+  #tracks-visuals img:nth-child(1){
+    top: -2em;
+    left: -5em;
+  }
+
+  #tracks-visuals img:nth-child(2){
+    top: 10em;
+    left: -7em;
+  }
+  
+  #tracks-visuals img:nth-child(3){
+    top: 2em;
+    left: 0em;
+  }
+  
+  #tracks-visuals img:nth-child(4){
+    top: 10em;
+    left: 3em;
+  }
+}
+
+@media only screen and (max-width: 800px) {
   #tracks-title{
-    right: 0;
+    right: 5em;
     transform: translateX(7em);
   }
 
   #tracks-visuals img{
     transform: scale(1.3);
-    opacity: 1;
+  }
+
+  #tracks-visuals img:nth-child(1){
+    top: 0em;
+    left: 0em;
+  }
+
+  #tracks-visuals img:nth-child(2){
+    top: -5em;
+    left: 5em;
+  }
+  
+  #tracks-visuals img:nth-child(3){
+    top: 8em;
+    left: 1em;
+  }
+
+  #tracks-visuals img:nth-child(4){
+    top: 13em;
+    left: 3em;
+    animation: tracks 1s cubic-bezier(0.075, 0.82, 0.165, 1) .75s infinite alternate;
+  }
+
+}
+
+@media only screen and (max-width: 450px) {
+  #tracks-title{
+    right: -2em;
+    transform: translateX(7em);
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  #tracks-visuals img{
+    transform: scale(1.5);
   }
 }
