--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,14 +14,15 @@ Browser override, default, and global styles go here
 }
 
 ::selection {
-  background: var(--paradisePink);
+  background: var(--electricIndigo);
 }
 
-body {
+body, html {
   margin: 0;
   padding: 0;
   width: 100vw;
-  overflow-x: hidden;
+  max-width: 100% !important;
+  overflow-x: hidden !important;
   font-family: 'Source Sans Pro', sans-serif;
   background: var(--russianViolet);
 }
