--- a/src/css/CheckBack.css
+++ b/src/css/CheckBack.css
@@ -3,8 +3,17 @@ Additional Checkbox coloring, spacing, and style goes here
 */
 
 #checkBack{
-  height: 90vh;
+  box-sizing: initial;
+  padding-top: 30vh;
+  height: 95vh;
   text-align: center;
+
+}
+
+
+iframe{
+    width: 50%;
+    height: 80%;
 }
 
 .checkBack-flair-left{
@@ -15,7 +24,14 @@ Additional Checkbox coloring, spacing, and style goes here
   border-bottom: 7px solid var(--electricBlue);
 }
 
+@media only screen and (max-width: 1100px) {
+  iframe{
+    width: 80%;
+  }
+}
+
 @media only screen and (max-width: 600px) {
+
   .checkBack-flair-left{
     border-top: 3px solid var(--paradisePink);
   }
